components/01-platform/kagenti-ui/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kagenti-ui
  namespace: kagenti-system
spec:
  selector:
    app: kagenti-ui
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kagenti-ui
  namespace: kagenti-system
  labels:
    app: kagenti-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kagenti-ui
  template:
    metadata:
      labels:
        app: kagenti-ui
    spec:
      serviceAccountName: kagenti-ui-service-account
      containers:
        - name: kagenti-ui-container
          image: ghcr.io/kagenti/kagenti/ui:v0.1.0-alpha.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cache
              mountPath: /app/.cache
            - name: streamlit
              mountPath: /.streamlit
          ports:
            - containerPort: 8501
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: cache
          emptyDir: {}
        - name: streamlit
          emptyDir: {}
